@@ -5,6 +5,9 @@ HISTORY
 1.2.9 (unreleased)
 ------------------
 
+- Use aq_parent instead of getParentNode for Zope trunk compatibility.
+  [elro]
+
 - Display error message when uploading a file with a name consisting
   only of spaces.
   Fixes http://dev.plone.org/plone/ticket/10394
